Integrate `EventLog` into gameplay flow: add scroll functionality, clear log on new game, and improve message management for failed actions and events.